<resources>
    <string name="app_name">Final</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cst_venue_booking">CST VENUE BOOKING</string>

    <string name="get_help">Get Help</string>
    <string name="title_activity_booking">Booking</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="todo">TODO</string>
</resources>