<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SIgnUp">

    <ImageView
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:background="@drawable/lo12"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/sign_up"
        android:textColor="#10B618"
        android:textSize="22sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:textAlignment="center"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="260dp"
        android:textColor="#5A5555"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:textAlignment="center"
        android:layout_marginTop="330dp"
        android:textColor="#5A5555"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="400dp"
        android:textAlignment="center"
        android:textColor="#5A5555"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/b1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:background="@drawable/bginout1"
        android:layout_marginTop="470dp"
        android:layout_marginStart="85dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="18sp"
        android:layout_marginTop="540dp"
        android:layout_marginStart="50dp"
        android:textColor="#505150"/>

    <TextView
        android:id="@+id/tV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:layout_marginTop="540dp"
        android:layout_marginLeft="270dp"
        android:textColor="#9462eb"/>
</FrameLayout>