<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard"
    android:id="@+id/dash"
    android:background="@drawable/home">

    <LinearLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FF3700B3"
        android:gravity="center"
        android:orientation="horizontal"
        tools:context=".DashBoard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/cst_venue_booking"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/aclonica"
        android:text="WELCOME"
        android:textColor="#8BE326"
        android:textSize="20dp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="180dp"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false">

        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:id="@+id/cd1"
            app:cardCornerRadius="9dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="1dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:background="@drawable/conf"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Conference"
                    android:textSize="13sp"
                    android:textColor="#000"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:id="@+id/cd2"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="9dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="1dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:background="@drawable/foot"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sports"
                    android:textSize="13sp"
                    android:textColor="#000"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:layout_height="100dp"
            app:cardElevation="5dp"
            android:id="@+id/cd3"
            app:cardCornerRadius="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:background="@drawable/book"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Literature&amp;Culture"
                    android:textSize="10sp"
                    android:textColor="#000"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:id="@+id/cd4"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="9dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="1dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/guid"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Self Guide"
                    android:textSize="13sp"
                    android:textColor="#000"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:id="@+id/cd5"
            app:cardElevation="5dp"
            app:cardCornerRadius="9dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="1dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/event"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Events"
                    android:textSize="13sp"
                    android:textColor="#000"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:id="@+id/cd6"
            app:cardCornerRadius="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="1dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/detai"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Venue Details"
                    android:textSize="13sp"
                    android:textColor="#000"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>    <androidx.cardview.widget.CardView
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:id="@+id/cd7"
        app:cardElevation="5dp"
        app:cardCornerRadius="9dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="1dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/about"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About Us"
                android:textSize="13sp"
                android:textColor="#000"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:id="@+id/cd8"
            app:cardElevation="5dp"
            app:cardCornerRadius="9dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="1dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:background="@drawable/feedback"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feedback"
                    android:textSize="13sp"
                    android:textColor="#000"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:id="@+id/cd9"
            app:cardElevation="5dp"
            app:cardCornerRadius="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="1dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/help"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_help"
                    android:textColor="#000"
                    android:textSize="13sp"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="13dp"
        android:background="@drawable/hamburger"
        android:contentDescription="@string/todo" />


</RelativeLayout>